LineFieldクラス用のステージレイアウトをcsv形式で読み込み、TetriminoFactoryを追加

--- a/PersonalProduct_2nd/PersonalProduct_2nd.csproj
+++ b/PersonalProduct_2nd/PersonalProduct_2nd.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Tetris_Block\Cell.cs" />
     <Compile Include="Tetris_Block\LineField.cs" />
     <Compile Include="Tetris_Block\Tetrimino.cs" />
-    <Compile Include="Tetris_Block\TetriminoFactory.cs" />
+    <Compile Include="Tetris_Block\TetrminoFactory.cs" />
     <Compile Include="Tetris_Block\Space.cs" />
     <Compile Include="Tetris_Block\Block.cs" />
     <Compile Include="Define\Screen.cs" />
