--- a/PersonalProduct_2nd/PersonalProduct_2nd.csproj
+++ b/PersonalProduct_2nd/PersonalProduct_2nd.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Tetris_Block\Cell.cs" />
     <Compile Include="Tetris_Block\LineField.cs" />
     <Compile Include="Tetris_Block\Tetrimino.cs" />
+    <Compile Include="Tetris_Block\Mino_Array.cs" />
     <Compile Include="Tetris_Block\TetrminoFactory.cs" />
     <Compile Include="Tetris_Block\Space.cs" />
     <Compile Include="Tetris_Block\Block.cs" />
