Tetriminoの左右移動を最適化、キー入力時のみ落下移動を実装、当たり判定の方法を大幅変更

--- a/PersonalProduct_2nd/PersonalProduct_2nd.csproj
+++ b/PersonalProduct_2nd/PersonalProduct_2nd.csproj
@@ -41,6 +41,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Define\Size.cs" />
+    <Compile Include="Device\ArrayRenderer.cs" />
     <Compile Include="Device\BGM_Loader.cs" />
     <Compile Include="Device\CSVReader.cs" />
     <Compile Include="Device\Loader.cs" />
