Tetriminoの状態管理クラスMinoStateManagerを追加、着地状態のブロックをLineFieldの配列に移す処理を追加し複数のTetriminoを表示されているような処理を実装

--- a/PersonalProduct_2nd/PersonalProduct_2nd.csproj
+++ b/PersonalProduct_2nd/PersonalProduct_2nd.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Tetris_Block\Cell.cs" />
     <Compile Include="Tetris_Block\LineField.cs" />
     <Compile Include="Tetris_Block\MinoMove.cs" />
+    <Compile Include="Tetris_Block\MinoStateManager.cs" />
     <Compile Include="Tetris_Block\Tetrimino.cs" />
     <Compile Include="Tetris_Block\Mino_Array.cs" />
     <Compile Include="Tetris_Block\Space.cs" />
