--- a/PersonalProduct_2nd/PersonalProduct_2nd.csproj
+++ b/PersonalProduct_2nd/PersonalProduct_2nd.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Device\Loader.cs" />
     <Compile Include="Device\SE_Loader.cs" />
     <Compile Include="Device\Texture_Loader.cs" />
+    <Compile Include="Scene\RemoveLineBoard.cs" />
     <Compile Include="Tetris_Block\Cell.cs" />
     <Compile Include="Tetris_Block\LineField.cs" />
     <Compile Include="Tetris_Block\MinoMove.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Utility\CountDown_Timer.cs" />
     <Compile Include="Utility\CountUp_Timer.cs" />
     <Compile Include="Utility\Range.cs" />
+    <Compile Include="Scene\Score.cs" />
     <Compile Include="Utility\Timer.cs" />
   </ItemGroup>
   <ItemGroup>
