LineFieldで行っていたテトリミノの動作制御をMinoCordinateControllerに委託・リファクタリング

--- a/PersonalProduct_2nd/PersonalProduct_2nd.csproj
+++ b/PersonalProduct_2nd/PersonalProduct_2nd.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Scene\RemoveLineBoard.cs" />
     <Compile Include="Tetris_Block\Cell.cs" />
     <Compile Include="Tetris_Block\LineField.cs" />
+    <Compile Include="Tetris_Block\MinoCordinateController.cs" />
     <Compile Include="Tetris_Block\MinoMove.cs" />
     <Compile Include="Tetris_Block\MinoStateManager.cs" />
     <Compile Include="Tetris_Block\Tetrimino.cs" />
