Tetriminoクラス内で直接行っていた処理をテトリミノの制御の仲介者に委託・リファクタリング

--- a/PersonalProduct_2nd/PersonalProduct_2nd.csproj
+++ b/PersonalProduct_2nd/PersonalProduct_2nd.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Scene\LevelBoard.cs" />
     <Compile Include="Scene\RemoveLineBoard.cs" />
     <Compile Include="Tetris_Block\Cell.cs" />
+    <Compile Include="Tetris_Block\IControllerMediator.cs" />
     <Compile Include="Tetris_Block\LineField.cs" />
     <Compile Include="Tetris_Block\MinoCordinateController.cs" />
     <Compile Include="Tetris_Block\MinoMove.cs" />
