Tetriminoの初期化方法(コンストラクタ)を追加。

--- a/PersonalProduct_2nd/PersonalProduct_2nd.csproj
+++ b/PersonalProduct_2nd/PersonalProduct_2nd.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Tetris_Block\LineField.cs" />
     <Compile Include="Tetris_Block\LineJudgement.cs" />
     <Compile Include="Tetris_Block\MinoCordinateController.cs" />
+    <Compile Include="Tetris_Block\MinoGenerator.cs" />
     <Compile Include="Tetris_Block\MinoMove.cs" />
     <Compile Include="Tetris_Block\MinoStateManager.cs" />
     <Compile Include="Tetris_Block\Tetrimino.cs" />
