--- a/PersonalProduct_2nd/PersonalProduct_2nd.csproj
+++ b/PersonalProduct_2nd/PersonalProduct_2nd.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Tetris_Block\MinoGenerator.cs" />
     <Compile Include="Tetris_Block\MinoMove.cs" />
     <Compile Include="Tetris_Block\MinoStateManager.cs" />
+    <Compile Include="Tetris_Block\NextMinoBoard.cs" />
     <Compile Include="Tetris_Block\Tetrimino.cs" />
     <Compile Include="Tetris_Block\Mino_Array.cs" />
     <Compile Include="Tetris_Block\Space.cs" />
